# agentic-design-patterns

./: README.md  prompt-chaining.ipynb  pyproject.toml
chapter-1/: 01-prompt-chaining.ipynb  02-routing.ipynb  05-tool-use.ipynb
chapter-2/: 01-mcp.ipynb  01-weather-mcp-server.py  10-mcp.ipynb
chapter-2/10-mcp/: 01-math-mcp-server.py
chapter-3/: 12-exception-handling-and-recovery.ipynb  14-knowledge-retrieval.ipynb
chapter-4/: 15-inter-agent-communication.ipynb  16-resource-aware-optimization.ipynb  17-reasoning-techniques.ipynb
