[project]
name = "agentic-design-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "deprecated>=1.3.1",
    "fastmcp>=3.2.4",
    "google-adk>=1.31.1",
    "google-cloud-aiplatform>=1.148.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.14",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.8",
    "langsmith[openai-agents]>=0.7.32",
    "pydantic>=2.13.2",
    "weaviate>=0.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
